feat(payments): implement M-Pesa STK Push integration for admission fees
Add complete M-Pesa payment integration enabling applicants to pay admission fees via STK Push. Implements Story 3.1 with full payment lifecycle management from initiation through callback processing.

**Backend Changes:**
- Add payments table migration with comprehensive tracking fields (merchant_request_id, checkout_request_id, mpesa_receipt_number)
- Create Payment model with application relationship and status enum
- Implement MpesaService for STK Push initiation, authentication, and callback processing
- Add PaymentController with endpoints for payment initiation, status polling, and webhook callbacks
- Configure M-Pesa credentials and callback URLs in config/mpesa.php
- Exclude payment callback route from CSRF protection

**Frontend Changes:**
- Create payment.blade.php view with phone number input and payment initiation UI
- Implement x-mpesa-receipt Blade component for displaying payment confirmations
- Add Alpine.js polling logic to check payment status every 3-5 seconds
- Implement loading states, success receipts, and error handling with retry capability

**Testing:**
- Add feature tests for complete payment flow including callback processing
- Add unit tests for MpesaService token generation and payload construction
- Add schema validation tests for payments table structure

This implementation follows the service-oriented architecture pattern with MpesaService as the single entry point for all Safaricom API interactions, includes proper security measures for webhook validation, and provides comprehensive audit logging for payment reconciliation.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -53,9 +53,9 @@ development_status:
   2-4-document-upload-component-storage: done
   epic-2-retrospective: optional
 
-  epic-3: backlog
-  3-1-m-pesa-stk-push-integration-web: backlog
-  3-2-manual-payment-fallback: backlog
+  epic-3: in-progress
+  3-1-m-pesa-stk-push-integration-web: done
+  3-2-manual-payment-fallback: review
   3-3-final-submission-logic: backlog
   3-4-payment-callback-handling: backlog
   epic-3-retrospective: optional
